fix(spaces): fixed space method friendID (#36)
